// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter length 0 1`] = `
<div>
  <p
    class="text-right text-xs text-gray-700"
  >
     
  </p>
</div>
`;

exports[`Counter length 123 1`] = `
<div>
  <p
    class="text-right text-xs text-gray-700"
  >
     
    123
  </p>
</div>
`;

exports[`Counter length 300, source 1`] = `
<div>
  <p
    class="text-right text-xs text-gray-700"
  >
     
    300
  </p>
</div>
`;

exports[`Counter length 300, tweet 1`] = `
<div>
  <p
    class="text-right text-xs text-red-500 "
  >
     
    300
  </p>
</div>
`;
